--- a/style.css
+++ b/style.css
@@ -58,20 +58,42 @@
   content: '';
   position: absolute;
   width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.3);
-  z-index: 1;
+  height: 100%
+  background: rgba(0, 0, 0, 0.3)
+  z-index: 1
 }*/
 .content {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: red;
+  color: #fff;
   text-align: center;
   z-index: 2;
 }
 .content h1 {
   font-size: 3rem;
   margin-bottom: 1rem;
+  font-weight: 700;
+  font-family: 'Poppins';
+  text-shadow: 2px 2px 8px
+  rgba(0, 0, 0, 0.5);
+  animation: fadeup 2s ease forwards;
+}
+.content p {
+  font-family: 'Sans-Serif';
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: #eee;
+  animation: fadeup 2s ease 0.5 forwards;
+}
+@keyframes fadeup {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
